Quick funky spacing fix.

--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -71,14 +71,15 @@ footer {
       padding: 0 12px;
       white-space: nowrap;
     }
+    p {
+      a {
+        padding: 0;
+        text-decoration: underline;
+      }
+    }
   }
   a {
     color: #fff;
-  }
-  p {
-    a {
-      text-decoration: underline;
-    }
   }
   .emailform {
     display: inline-block;
